		http://creativecommons.org/licenses/by-nc-sa/3.0/
---

Build <<REVISION>> (Version 1.1.<<REVISION>>)

  * Revamped admin panel
  * Backend optimizations
  * Duplicate schedules on import now overwrite previous existing schedule
  * Pilot notified of registration status
  * Search list aircraft dupes fixed
  * Search shows results properly
  * Enabled/disable aircraft
  * Update check fixed
  * Javascript trimmed down
  * Maintenance section to calculate distances for routes/pireps
  * PIREP access controls fixed
  * Security fixes

Build 458 (Version 1.1.458)

  * Added page encoding option
  * Added option for changing pilot ID length
  * Added option to change signature text color
  * Admin can edit PIREPS
  * Some admin reports added
  * FSACARS bug fixes
  * Admin panel styles cleaned up
  * Bug fixes (alot of em!)
  
 Template Changes:
 
	core_htmlhead.tpl - added page encoding meta tag
  
Build 441 (Version 1.1.441)

  * Basic stats in Admin Panel
  * View only active/inactive schedules
  * PIREP table fixed (major bug fix)
  
  Templates Changes:
	pirep_new.tpl - the Aircraft option field value has changed
			MAKE SURE YOU CHANGE THIS or else your PIREPS will fail
	pireps_viewall.tpl - Aircraft registration added to list
	pirep_viewreport.tpl - Aircraft added to view

Build 437 (Version 1.1.437)

  * Aircraft registration options added
  * Routes can be assigned specific aircraft/registration
  * Pilot avatars added, with sizing options
		(/lib/avatars need write permissions)
  * Delete pilots (go in the Pilot Options in Admin Panel)
  * Pilot country with flag images added
  * Dynamic signatures generated, to use on forums, etc
		(/lib/signatures need write permissions)
  * Bug fixes for servers with short_open_tags off
  * ACARS map shows the proper map type/centers according to settings
  * Admin edit of profile didn't recalculate for new rank
  * Bids are removed now when PIREP is done through ACARS