@@ -2,7 +2,7 @@
 <div class="mapcenter" align="center">
 <?php
 
-	// I do this because they can both contain the coordinates
+	# I do this because they can both contain the coordinates
 	if($pirep)
 		$mapdata = $pirep;
 	if($schedule)
@@ -14,10 +14,10 @@
 	$map = new GoogleMapAPI('routemap', 'phpVMS');
 	$map->sidebar=false;
 	
-	$map->addMarkerIcon(SITE_URL.'/lib/images/towerdeparture.png'); //, '', 0, 0, 10, 10);
+	$map->addMarkerIcon(SITE_URL.'/lib/images/towerdeparture.png', 35, 35); //, '', 0, 0, 10, 10);
 	$map->addMarkerByCoords($mapdata->deplong, $mapdata->deplat, '', "$mapdata->depname ($mapdata->depicao)");
 	
-	$map->addMarkerIcon(SITE_URL.'/lib/images/towerarrival.png'); //, 0, 0, 40, 40);
+	$map->addMarkerIcon(SITE_URL.'/lib/images/towerarrival.png', 35, 35); //, 0, 0, 40, 40);
 	$map->addMarkerByCoords($mapdata->arrlong, $mapdata->arrlat, '', "$mapdata->arrname ($mapdata->arricao)");
 	
 	$map->addPolyLineByCoords($mapdata->deplong, $mapdata->deplat, $mapdata->arrlong, $mapdata->arrlat, Config::Get('MAP_LINE_COLOR'), 5, 50);
