@@ -1,1 +1,0 @@
-<?xml version="1.0" encoding="utf-8"?><rss version="2.0"><channel><title>Latest Pilot Reports RSS Feed</title><link>http://localhost/phpvms</link><description>The latest pilot reports</description><lastBuildDate>Tue, 30 Dec 2008 20:06:14 EST</lastBuildDate><language>en-us</language><item><title>Report #95 - KORD to KLAX</title><link>http://localhost/phpvms/admin/index.php?admin=viewpending</link><guid>http://localhost/phpvms/admin/index.php?admin=viewpending#Report#95-KORDtoKLAX</guid><pubDate>Tue, 30 Dec 2008 20:06:14 EST</pubDate><description>Filed by VMA0001 (Nabeel Shahzad)</description></item><item><title>Report #94 - KORD to KLAX</title><link>http://localhost/phpvms/admin/index.php?admin=viewpending</link><guid>http://localhost/phpvms/admin/index.php?admin=viewpending#Report#94-KORDtoKLAX</guid><pubDate>Tue, 30 Dec 2008 20:06:14 EST</pubDate><description>Filed by VMA0001 (Nabeel Shahzad)</description></item><item><title>Report #93 - KORD to KLAX</title><link>http://localhost/phpvms/admin/index.php?admin=viewpending</link><guid>http://localhost/phpvms/admin/index.php?admin=viewpending#Report#93-KORDtoKLAX</guid><pubDate>Tue, 30 Dec 2008 20:06:14 EST</pubDate><description>Filed by VMA0001 (Nabeel Shahzad)</description></item><item><title>Report #92 - KORD to KLAX</title><link>http://localhost/phpvms/admin/index.php?admin=viewpending</link><guid>http://localhost/phpvms/admin/index.php?admin=viewpending#Report#92-KORDtoKLAX</guid><pubDate>Tue, 30 Dec 2008 20:06:14 EST</pubDate><description>Filed by VMA0001 (Nabeel Shahzad)</description></item><item><title>Report #91 - KORD to KLAX</title><link>http://localhost/phpvms/admin/index.php?admin=viewpending</link><guid>http://localhost/phpvms/admin/index.php?admin=viewpending#Report#91-KORDtoKLAX</guid><pubDate>Tue, 30 Dec 2008 20:06:14 EST</pubDate><description>Filed by VMA0001 (Nabeel Shahzad)</description></item><item><title>Report #90 - KORD to KLAX</title><link>http://localhost/phpvms/admin/index.php?admin=viewpending</link><guid>http://localhost/phpvms/admin/index.php?admin=viewpending#Report#90-KORDtoKLAX</guid><pubDate>Tue, 30 Dec 2008 20:06:14 EST</pubDate><description>Filed by VMA0001 (Nabeel Shahzad)</description></item><item><title>Report #89 - KORD to KLAX</title><link>http://localhost/phpvms/admin/index.php?admin=viewpending</link><guid>http://localhost/phpvms/admin/index.php?admin=viewpending#Report#89-KORDtoKLAX</guid><pubDate>Tue, 30 Dec 2008 20:06:14 EST</pubDate><description>Filed by VMA0001 (Nabeel Shahzad)</description></item><item><title>Report #88 - KORD to KLAX</title><link>http://localhost/phpvms/admin/index.php?admin=viewpending</link><guid>http://localhost/phpvms/admin/index.php?admin=viewpending#Report#88-KORDtoKLAX</guid><pubDate>Tue, 30 Dec 2008 20:06:14 EST</pubDate><description>Filed by VMA0001 (Nabeel Shahzad)</description></item><item><title>Report #87 - KORD to KLAX</title><link>http://localhost/phpvms/admin/index.php?admin=viewpending</link><guid>http://localhost/phpvms/admin/index.php?admin=viewpending#Report#87-KORDtoKLAX</guid><pubDate>Tue, 30 Dec 2008 20:06:14 EST</pubDate><description>Filed by VMA0001 (Nabeel Shahzad)</description></item><item><title>Report #86 - KORD to KLAX</title><link>http://localhost/phpvms/admin/index.php?admin=viewpending</link><guid>http://localhost/phpvms/admin/index.php?admin=viewpending#Report#86-KORDtoKLAX</guid><pubDate>Tue, 30 Dec 2008 20:06:14 EST</pubDate><description>Filed by VMA0001 (Nabeel Shahzad)</description></item></channel></rss>
